test-cov.txt
node : (node:17544) 
ExperimentalWarning: VM Modules is 
an experimental feature and might 
change at any time
At line:1 char:1
+ node --experimental-vm-modules 
node_modules/jest/bin/jest.js 
--covera ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSp 
   ecified: ((node:17544) Ex...nge  
   at any time:String) [], Remote   
 Exception
    + FullyQualifiedErrorId : Nativ 
   eCommandError
 
(Use `node --trace-warnings ...` to 
show where the warning was created)
PASS src/tests/unit/repositories/ses
sion.repository.test.js
  Session Repository - 
createSession()
    竏・should create session with 
refresh token and expiry (4 ms)
    竏・should link session to user 
ID (1 ms)
  Session Repository - 
findSessionByToken()
    竏・should return session when 
token valid and not expired (1 ms)
    竏・should return null when token 
not found (1 ms)
    竏・should return null when 
session expired
    竏・should validate user ID 
ownership (2 ms)
    竏・should use gt (greater than) 
for expiry check
  Session Repository - 
deleteSession()
    竏・should delete session by 
refresh token (2 ms)
    竏・should return delete count (1 
ms)
    竏・should handle deleting 
non-existent session
  Session Repository - 
deleteUserSessions()
    竏・should delete all sessions 
for user
    竏・should return count of 
deleted sessions (1 ms)
    竏・should return 0 when user has 
no sessions
  Session Repository - 
cleanExpiredSessions()
    竏・should delete only expired 
sessions
    竏・should use lt (less than) for 
expiry check (1 ms)
    竏・should return count of 
cleaned sessions
    竏・should return 0 when no 
expired sessions exist (1 ms)

PASS src/tests/integration/routes/au
th/refresh.route.test.js
  Refresh Route - POST /auth/refresh
    竏・should return new access 
token with valid refresh token (4 
ms)
    竏・should return 401 when 
refresh token missing (2 ms)
    竏・should return 401 when 
refresh token invalid (1 ms)
    竏・should clear cookies on error 
(5 ms)
    竏・should log successful token 
refresh (2 ms)

PASS src/tests/unit/services/user.se
rvice.test.js
  User Service - getUserProfile()
    竏・should return user profile 
when user exists (4 ms)
    竏・should throw 404 when user 
not found (1 ms)
  User Service - updateUserProfile()
    竏・should update user profile 
with valid data
    竏・should only update 
whitelisted fields (name)
    竏・should return unchanged 
profile when no valid updates 
provided (1 ms)
    竏・should filter out non-allowed 
fields (3 ms)
    竏・should handle empty name and 
return unchanged profile (2 ms)

PASS src/tests/integration/routes/us
er/profile.route.test.js
  Profile Route - GET /user/profile
    竏・should return user profile 
when authenticated (3 ms)
    竏・should use userId from 
request.user (1 ms)
    竏・should throw 404 when user 
not found (1 ms)
  Profile Route - PUT /user/profile
    竏・should update name 
successfully (1 ms)
    竏・should validate name min 
length (2)
    竏・should log profile update (1 
ms)
    竏・should handle empty update 
data (1 ms)

PASS src/tests/unit/repositories/use
r.repository.test.js
  User Repository - createUser()
    竏・should create user with 
correct data (3 ms)
    竏・should exclude password from 
returned object (1 ms)
    竏・should include id, email, 
name, createdAt (1 ms)
  User Repository - 
findUserByEmail()
    竏・should return user with 
password when found (1 ms)
    竏・should return null when not 
found
  User Repository - findUserById()
    竏・should return user without 
password when found (1 ms)
    竏・should return null when not 
found (1 ms)
  User Repository - updateUser()
    竏・should update user data 
correctly
    竏・should return updated user 
without password (1 ms)
  User Repository - emailExists()
    竏・should return true when email 
exists (1 ms)
    竏・should return false when 
email does not exist (1 ms)
    竏・should return true when 
multiple users exist with same email

PASS src/tests/integration/routes/au
th/signin.route.test.js
  Signin Route - POST /auth/signin
    竏・should successfully login 
with valid credentials (4 ms)
    竏・should set access token 
cookie (1 ms)
    竏・should set refresh token 
cookie (5 ms)
    竏・should return 401 for invalid 
email (2 ms)
    竏・should return 401 for invalid 
password
    竏・should log successful signin 
(1 ms)
    竏・should have rate limiting 
configured (5 attempts per 15 
minutes)

PASS src/tests/integration/routes/au
th/signup.route.test.js
  Signup Route - POST /auth/signup
    竏・should successfully register 
a new user (201) (3 ms)
    竏・should validate email format 
(1 ms)
    竏・should validate password min 
length (8) (1 ms)
    竏・should validate name min 
length (2) (1 ms)
    竏・should return 409 for 
duplicate email (1 ms)
    竏・should require all fields (2 
ms)
    竏・should log successful 
registration (1 ms)

PASS src/tests/unit/middlewares/auth
.middleware.test.js
  Auth Middleware - authenticate()
    竏・should call jwtVerify with 
onlyCookie option (3 ms)
    竏・should pass when JWT is valid 
(2 ms)
    竏・should return 401 error with 
correct message when JWT invalid (1 
ms)
    竏・should handle expired JWT 
tokens
    竏・should handle missing JWT 
tokens (1 ms)
    竏・should handle malformed JWT 
tokens (1 ms)

PASS src/tests/integration/routes/au
th/signout.route.test.js
  Signout Route - POST /auth/signout
    竏・should successfully log out 
user (3 ms)
    竏・should clear cookies
    竏・should delete session from 
database (1 ms)
    竏・should require authentication 
(preHandler)
    竏・should log successful signout 
(1 ms)
    竏・should handle signout even 
without refresh token (1 ms)

FAIL src/tests/unit/services/auth.se
rvice.test.js
  笳・Test suite failed to run

    SyntaxError: The requested 
module 'bcrypt' does not provide an 
export named 'default'

    [0m [90m 37 |[39m
     [90m 38 |[39m [90m// Import 
service after mocks[39m
    [31m[1m>[22m[39m[90m 39 
|[39m [36mconst[39m { 
signup[33m,[39m signin[33m,[39m 
createAuthSession[33m,[39m 
refreshAccessToken[33m,[39m 
signout } [33m=[39m 
[36mawait[39m [36mimport[39m([3
2m'../../../services/auth.service.js
'[39m)[33m;[39m
     [90m    |[39m                
                                    
                        
[31m[1m^[22m[39m
     [90m 40 |[39m
     [90m 41 |[39m [90m// Import 
test helpers[39m
     [90m 42 |[39m 
[36mimport[39m { 
createTestUser[33m,[39m 
createTestSession[33m,[39m 
createMockJWT } [36mfrom[39m [32m
'../../helpers/test-helpers.js'[39m
[33m;[39m[0m

      at 
Runtime.linkAndEvaluateModule (node_
modules/jest-runtime/build/index.js:
684:5)
      at src/tests/unit/services/aut
h.service.test.js:39:76

------------------------|---------|----------|---------|---------|-------------------
File                    | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------------|---------|----------|---------|---------|-------------------
All files               |   63.24 |       30 |   82.75 |   62.93 |                   
 middlewares            |     100 |      100 |     100 |     100 |                   
  auth.middleware.js    |     100 |      100 |     100 |     100 |                   
 repositories           |     100 |      100 |     100 |     100 |                   
  session.repository.js |     100 |      100 |     100 |     100 |                   
  user.repository.js    |     100 |      100 |     100 |     100 |                   
 routes/auth            |     100 |      100 |     100 |     100 |                   
  refresh.route.js      |     100 |      100 |     100 |     100 |                   
  signin.route.js       |     100 |      100 |     100 |     100 |                   
  signout.route.js      |     100 |      100 |     100 |     100 |                   
  signup.route.js       |     100 |      100 |     100 |     100 |                   
 routes/user            |     100 |      100 |     100 |     100 |                   
  profile.route.js      |     100 |      100 |     100 |     100 |                   
 services               |   21.81 |       30 |   28.57 |   20.37 |                   
  auth.service.js       |       0 |        0 |       0 |       0 | 18-138            
  user.service.js       |     100 |      100 |     100 |     100 |                   
------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 9 passed, 10 
total
Tests:       74 passed, 74 total
Snapshots:   0 total
Time:        2.11 s
Ran all test suites.
